5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4123/executions/1675_2474.log
== TEST (2019-05-14 11:53:03) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?
sem = ["sabado","domingo","segunda","terca","quarta","quinta","sexta"]
d = int(input())
m = int(input())
a = int(input())
h = q + 13*(m+1)/5 + ano%100 + (ano%100)/4 + ano/100/4 + 5*ano/100
print(sem[int(h)])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    h = q + 13*(m+1)/5 + ano%100 + (ano%100)/4 + ano/100/4 + 5*ano/100
NameError: name 'q' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:53:21) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?
sem = ["sabado","domingo","segunda","terca","quarta","quinta","sexta"]
d = int(input())
m = int(input())
a = int(input())
h = d + 13*(m+1)/5 + ano%100 + (ano%100)/4 + ano/100/4 + 5*ano/100
print(sem[int(h)])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    h = d + 13*(m+1)/5 + ano%100 + (ano%100)/4 + ano/100/4 + 5*ano/100
NameError: name 'ano' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:53:37) 
-- CODE:
# Teste seu código com o dia do seu nascimento. Deu certo? E o dia de hoje?

# Que importante cientista nasceu em 4 de janeiro de 1643?
sem = ["sabado","domingo","segunda","terca","quarta","quinta","sexta"]
d = int(input())
m = int(input())
ano = int(input())
h = d + 13*(m+1)/5 + ano%100 + (ano%100)/4 + ano/100/4 + 5*ano/100
print(sem[int(h)])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(sem[int(h)])
IndexError: list index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
